force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__DepotLocationNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DepotLocationNotes__c</fullName>
    <description>Information is used to find the returned item at the depot location.  For example, Aisle 13, Shelf J, Bin 2, etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Depot Location Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>