force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__ExpectedCondition__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpectedCondition__c</fullName>
    <description>The expected condition of the returned item upon arrival at the depot location.</description>
    <label>Expected Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Good/Working</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>