force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__ReceivedById__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReceivedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that processed the return (received the item) at the depot location on a return.</description>
    <label>Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReceivedByUserReturnOrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>