force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__ReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReceivedDate__c</fullName>
    <description>The date on which the item is received at the depot location.</description>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>