force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__ReturnedCondition__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReturnedCondition__c</fullName>
    <description>Condition of the returned item upon arrival at the depot location</description>
    <label>Returned Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good/Working</fullName>
            </value>
            <value>
                <fullName>Defective</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Shipping Damage</fullName>
                <isActive>false</isActive>
                <label>Shipping Damage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>