force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__ReturnIssue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReturnIssue__c</fullName>
    <description>Indicates an issue found against the returned item upon receiving.</description>
    <inlineHelpText>Indicates issue occurred with the returned part</inlineHelpText>
    <label>Return Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Subcomponents</fullName>
            </value>
            <value>
                <fullName>Wrong Item</fullName>
            </value>
            <value>
                <fullName>Wrong Quantity</fullName>
            </value>
            <value>
                <fullName>Shipping Damage</fullName>
                <isActive>false</isActive>
                <label>Shipping Damage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>