force-app/main/default/objects/ReturnOrderLineItem/fields/SVMXA360__ReturnItemInformation__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReturnItemInformation__c</fullName>
    <description>Additional return information specific to the returned item. Used by the receiving/depot repair processes to indicate if a returned item is repairable.</description>
    <label>Return Item Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>